--- a/index.html
+++ b/index.html
@@ -107,9 +107,10 @@
                 <input class="bt1" type="button" value="Read More">
             </div>
 
-            <div>
-                <img class="hill" src="Resources\Images\Rectangle 4.png" alt="">
+            <div class="hill" >
+                <img src="Resources\Images\Rectangle 4.png" alt="">
             </div>
+        
         </section>
     </main>
 
