--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
                 <input class="bt1" type="button" value="Read More">
             </div>
 
-            <div class="hill" >
+            <!-- <div class="hill" >
                 <img src="Resources\Images\Rectangle 4.png" alt="">
-            </div>
+            </div> -->
         
         </section>
     </main>
