--- a/index.html
+++ b/index.html
@@ -107,10 +107,51 @@
                 <input class="bt1" type="button" value="Read More">
             </div>
 
-            <!-- <div class="hill" >
+            <div class="hill">
                 <img src="Resources\Images\Rectangle 4.png" alt="">
-            </div> -->
-        
+            </div>
+
+        </section>
+
+        <!-- Choose Your Destination -->
+        <section class="hamim">
+           <h1 class="ht2">
+                Choose Your Destination
+            </h1>
+
+            <p class="pt2">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. Sodales
+                dictumst nec nibh pellentesque.</p>
+
+
+            <div class="img2">
+                <div class="im1">
+                    <img class="img9" src="resources/images/Rectangle 5.png" alt="">
+                    <img src="resources/images/Rectangle 8.png" alt="">
+                </div>
+
+                <div class="im2">
+                    <img src="resources/images/Rectangle 6.png" alt="">
+                    <img src="resources/images/Rectangle 7.png" alt="">
+                    <img src="resources/images/Rectangle 9.png" alt="">
+                </div>
+
+                <div class="im3">
+                    <img src="resources/images/Rectangle 11.png" alt="">
+                    <img src="resources/images/Rectangle 10.png" alt="">
+                </div>
+            </div>
+
+        </section>
+
+        <!-- Why Choose Us -->
+        <section class="Why Choose Us">
+            <div>
+
+            </div>
+
+            <div>
+
+            </div>
         </section>
     </main>
 
