--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </nav>
 
         <div class="header-bgm">
-            <h1>Hamim</h1>
+            <h1>Jim</h1>
             <h1 class="exp">Explore Your Travel</h1>
 
             <p class="la">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor adipiscing. In et odio
