--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 
             <div class="nav-link">
                 <ul>
+                    <a href="Funny-Video.html">Funny video</a>
                     <li><a id="home" class="mt" href="home.html">Home</a></li>
                     <li><a class="bl mt" href="blogs.html">Packages</a></li>
                     <li><a class="bl mt" href="blogs.html">Testimonial</a></li>
