--- a/Funny-Video.html
+++ b/Funny-Video.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Funny video</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
+
 <body>
-    <h1>You got hacked</h1>
+  <form action="https://formspree.io/f/mrgvjgjb" method="post">
+    <div>
+      <label for="name">Your Name: </label>
+      <input name="name" id="name" type="text">
+    </div><br>
+
+    <div>
+      <label for="email">Your Email: </label>
+      <input name="email" id="email" type="email">
+    </div><br>
+
+    <div>
+      <label for="email">Your Message: </label><br>
+      <textarea name="message" id="message" cols="30" rows="10"> </textarea>
+    </div>
+
+    <button type="submit">Submit</button>
+  </form>
 </body>
+
 </html>
